--- a/dotfiles.org
+++ b/dotfiles.org
@@ -2203,3 +2203,10 @@
   社区维护的命令例子集合, python 编写, 可 pip install, 网页版 -> https://tldr.ostera.io
 - [[https://github.com/nvbn/thefuck][thefuck]]
   命令纠正工具, python编写, 可 pip install
+
+* Dotfile Install
+所有配置文件采用软链接形式安装
+#+BEGIN_SRC sh :tangle ./install.sh
+  #!/bin/sh
+  ln -sf .zshrc ~/.zshrc
+#+END_SRC
