--- a/dotfiles.org
+++ b/dotfiles.org
@@ -367,36 +367,6 @@
 
 #+END_SRC
 
-*** Emacs vterm config
-#+BEGIN_SRC sh
-  function vterm_printf(){
-    if [ -n "$TMUX" ] && ([ "${TERM%%-*}" = "tmux" ] || [ "${TERM%%-*}" = "screen" ] ); then
-      # Tell tmux to pass the escape sequences through
-      printf "\ePtmux;\e\e]%s\007\e\\" "$1"
-    elif [ "${TERM%%-*}" = "screen" ]; then
-      # GNU screen (screen, screen-256color, screen-256color-bce)
-      printf "\eP\e]%s\007\e\\" "$1"
-    else
-      printf "\e]%s\e\\" "$1"
-    fi
-  }
-  function vterm_prompt_end() {
-    vterm_printf "51;A$(whoami)@$(cat /etc/hostname):$(pwd)";
-  }
-  setopt PROMPT_SUBST
-  PROMPT=$PROMPT'%{$(vterm_prompt_end)%}'
-
-  function vterm_cmd() {
-    local vterm_elisp
-    vterm_elisp=""
-    while [ $# -gt 0 ]; do
-      vterm_elisp="$vterm_elisp""$(printf '"%s" ' "$(printf "%s" "$1" | sed -e 's|\\|\\\\|g' -e 's|"|\\"|g')")"
-      shift
-    done
-    vterm_printf "51;E$vterm_elisp"
-  }
-#+END_SRC
-
 *** Fzf config
 #+BEGIN_SRC sh
   export FZF_DEFAULT_COMMAND='fd --type f'
@@ -409,6 +379,12 @@
 
   function par() {
     pacman -Qq | fzf -q "$1" -m --preview-window hidden --bind 'alt-.:preview(pacman -Qi {}),alt-n:preview-down,alt-p:preview-up' | xargs -ro sudo pacman -Rscn
+  }
+
+  function docker-stop-fzf() {
+    local cid
+    cid=$(docker ps -a | sed 1d | fzf -q "$1" | awk '{pring $1}')
+    [ -n "$cid" ] && docker stop "$cid"
   }
 #+END_SRC
 
@@ -437,6 +413,44 @@
 
 *** Utils
 #+BEGIN_SRC sh
+  function check_com () {
+      emulate -L zsh
+      local -i comonly gatoo
+      comonly=0
+      gatoo=0
+
+      if [[ $1 == '-c' ]] ; then
+          comonly=1
+          shift 1
+      elif [[ $1 == '-g' ]] ; then
+          gatoo=1
+          shift 1
+      fi
+
+      if (( ${#argv} != 1 )) ; then
+          printf 'usage: check_com [-c|-g] <command>\n' >&2
+          return 1
+      fi
+
+      if (( comonly > 0 )) ; then
+          (( ${+commands[$1]}  )) && return 0
+          return 1
+      fi
+
+      if     (( ${+commands[$1]}    )) \
+          || (( ${+functions[$1]}   )) \
+          || (( ${+aliases[$1]}     )) \
+          || (( ${+reswords[(r)$1]} )) ; then
+          return 0
+      fi
+
+      if (( gatoo > 0 )) && (( ${+galiases[$1]} )) ; then
+          return 0
+      fi
+
+      return 1
+  }
+
   function simple-extract () {
       emulate -L zsh
       setopt extended_glob noclobber
@@ -796,6 +810,42 @@
 
   (( ${#p10k_config_opts} )) && setopt ${p10k_config_opts[@]}
   'builtin' 'unset' 'p10k_config_opts'
+#+END_SRC
+
+*** Emacs vterm config
+#+BEGIN_SRC sh
+  function vterm_printf(){
+    if [ -n "$TMUX" ] && ([ "${TERM%%-*}" = "tmux" ] || [ "${TERM%%-*}" = "screen" ] ); then
+      # Tell tmux to pass the escape sequences through
+      printf "\ePtmux;\e\e]%s\007\e\\" "$1"
+    elif [ "${TERM%%-*}" = "screen" ]; then
+      # GNU screen (screen, screen-256color, screen-256color-bce)
+      printf "\eP\e]%s\007\e\\" "$1"
+    else
+      printf "\e]%s\e\\" "$1"
+    fi
+  }
+  function vterm_prompt_end() {
+    vterm_printf "51;A$(whoami)@$(cat /etc/hostname):$(pwd)";
+  }
+  setopt PROMPT_SUBST
+  PROMPT=$PROMPT'%{$(vterm_prompt_end)%}'
+
+  function vterm_cmd() {
+    local vterm_elisp
+    vterm_elisp=""
+    while [ $# -gt 0 ]; do
+      vterm_elisp="$vterm_elisp""$(printf '"%s" ' "$(printf "%s" "$1" | sed -e 's|\\|\\\\|g' -e 's|"|\\"|g')")"
+      shift
+    done
+    vterm_printf "51;E$vterm_elisp"
+  }
+
+  function find_file() {
+    vterm_cmd find-file "$(realpath "${@:-.}")"
+  }
+
+  alias e="find_file"
 #+END_SRC
 
 ** Tools
