--- a/dotfiles.org
+++ b/dotfiles.org
@@ -398,6 +398,7 @@
   bindkey -e
   bindkey -M emacs '^[p' history-substring-search-up
   bindkey -M emacs '^[n' history-substring-search-down
+  bindkey "^[[3~" delete-char
 #+end_src
 
 *** All alias
