--- a/dotfiles.org
+++ b/dotfiles.org
@@ -1000,7 +1000,7 @@
       }
 
 
-      shared_except "locked" {
+      shared_except "locked" "renametab" "renamepane" {
           bind "i" { SwitchToMode "locked"; }
           bind "a" { SwitchToMode "locked"; }
           bind "Ctrl g" { SwitchToMode "normal"; }
